--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#02A5E6"
-    tools:context="com.example.hispeed.calculatoroil.SplashScreen">
+    tools:context="com.example.hispeed.calculatoroil.SplashScreenActivity">
 
 
     <LinearLayout
