--- a/app/src/main/res/layout/fragment_developer.xml
+++ b/app/src/main/res/layout/fragment_developer.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFE0B2"
-    tools:context="com.example.hispeed.calculatoroil.Developer">
+    android:background="@color/YellowLight"
+    tools:context="com.example.hispeed.calculatoroil.DeveloperFragment">
 
 
     <LinearLayout
@@ -17,74 +17,71 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:text="ผู้พัฒนา"
-            android:textColor="#0065ff"
-            android:textSize="@dimen/text_head_develop"
+            android:layout_marginTop="@dimen/margin_normal"
+            android:text="@string/text_develop"
+            android:textColor="@color/Blue"
+            android:textSize="@dimen/textsize_header"
             android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginRight="@dimen/margin_normal"
+            android:layout_marginTop="@dimen/margin_space_text"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="50dp"
+                android:layout_width="@dimen/margin_xlarge"
                 android:layout_height="wrap_content"
-                android:text="ถึง"
-                android:textColor="#0065ff"
-                android:textSize="@dimen/text_email" />
+                android:text="@string/text_email"
+                android:textColor="@color/Blue"
+                android:textSize="@dimen/textsize_normal" />
 
             <EditText
                 android:id="@+id/edt_title_gmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:backgroundTint="#FFE0B2"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:backgroundTint="@color/YellowLight"
                 android:maxLines="1"
-                android:textSize="@dimen/text_email" />
+                android:textSize="@dimen/textsize_normal" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginLeft="@dimen/margin_normal"
+            android:layout_marginRight="@dimen/margin_normal"
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="50dp"
+                android:layout_width="@dimen/margin_xlarge"
                 android:layout_height="wrap_content"
-                android:text="เรื่อง"
-                android:textColor="#0065ff"
-                android:textSize="@dimen/text_subject" />
+                android:text="@string/text_subject"
+                android:textColor="@color/Blue"
+                android:textSize="@dimen/textsize_normal" />
 
             <EditText
                 android:id="@+id/edt_subject_gmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="6dp"
-                android:backgroundTint="#FFE0B2"
+                android:layout_marginLeft="@dimen/margin_small"
+                android:backgroundTint="@color/YellowLight"
                 android:maxLines="1"
-                android:textSize="@dimen/text_subject" />
+                android:textSize="@dimen/textsize_normal" />
         </LinearLayout>
 
         <EditText
             android:id="@+id/edt_text_gmail"
             android:layout_width="match_parent"
-            android:layout_height="350dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="15dp"
+            android:layout_height="200dp"
+            android:layout_margin="@dimen/margin_normal"
             android:background="@drawable/text"
             android:gravity="top|left"
-            android:textSize="@dimen/text_body"
             android:inputType="textMultiLine"
-            android:padding="10dp" />
+            android:padding="@dimen/margin_small"
+            android:textSize="@dimen/textsize_normal" />
 
     </LinearLayout>
 
