--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -7,24 +7,21 @@
     android:layout_height="match_parent">
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-
             <LinearLayout
-                android:id="@+id/linearbtnsearch"
+                android:id="@+id/linearSearch"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:elevation="16dp"
+                android:elevation="@dimen/margin_normal"
                 android:orientation="vertical">
 
                 <RelativeLayout
-
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/GreenLight">
@@ -32,50 +29,47 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        android:orientation="vertical"
+                        android:paddingTop="@dimen/margin_small">
 
                         <android.support.v7.widget.CardView
+                            style="@style/borderStyle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
-                            android:layout_marginTop="6dp"
-                            app:cardCornerRadius="5dp"
-                            app:cardElevation="5dp">
+                            app:cardCornerRadius="@dimen/margin_small"
+                            app:cardElevation="@dimen/margin_small">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
-
                                 <FrameLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
-
 
                                     <EditText
                                         android:id="@+id/editstartlocation"
                                         android:layout_width="match_parent"
                                         android:layout_height="42dp"
                                         android:layout_gravity="center_vertical"
-                                        android:backgroundTint="#FFFFFF"
-                                        android:drawablePadding="8dp"
+                                        android:backgroundTint="@color/white"
+                                        android:clickable="true"
+                                        android:drawablePadding="@dimen/margin_line"
+                                        android:focusableInTouchMode="true"
                                         android:hint="@string/origin"
+                                        android:imeOptions="actionDone"
                                         android:inputType="text"
                                         android:maxLines="1"
                                         android:paddingLeft="45dp"
                                         android:paddingRight="70dp"
-                                        android:textSize="16sp"
-                                        android:clickable="true"
-                                        android:focusableInTouchMode="true"
-                                        android:imeOptions="actionDone"/>
+                                        android:textSize="@dimen/textsize_normal" />
 
                                     <ImageView
                                         android:layout_width="40dp"
                                         android:layout_height="25dp"
                                         android:layout_gravity="center_vertical"
-                                        android:layout_marginLeft="5dp"
+                                        android:layout_marginLeft="@dimen/margin_small"
                                         android:src="@drawable/a_word" />
 
                                     <RelativeLayout
@@ -86,9 +80,9 @@
 
                                         <Button
                                             android:id="@+id/btncleartextori"
-                                            android:layout_width="24dp"
-                                            android:layout_height="24dp"
-                                            android:layout_marginRight="36dp"
+                                            android:layout_width="@dimen/margin_large"
+                                            android:layout_height="@dimen/margin_large"
+                                            android:layout_marginRight="70dp"
                                             android:background="@drawable/ic_close_black_24dp"
                                             android:visibility="invisible" />
                                     </RelativeLayout>
@@ -99,47 +93,42 @@
 
 
                         <android.support.v7.widget.CardView
+                            style="@style/borderStyle"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="6dp"
-                            android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
-                            android:layout_marginTop="6dp"
-                            app:cardCornerRadius="5dp"
-                            app:cardElevation="5dp">
+                            app:cardCornerRadius="@dimen/margin_small"
+                            app:cardElevation="@dimen/margin_small">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal">
 
-
                                 <FrameLayout
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content">
-
 
                                     <EditText
                                         android:id="@+id/editendlocation"
                                         android:layout_width="match_parent"
                                         android:layout_height="42dp"
                                         android:layout_gravity="center_vertical"
-                                        android:backgroundTint="#FFFFFF"
+                                        android:backgroundTint="@color/white"
+                                        android:clickable="true"
+                                        android:focusableInTouchMode="true"
                                         android:hint="@string/destination"
+                                        android:imeOptions="actionDone"
                                         android:inputType="text"
                                         android:maxLines="1"
                                         android:paddingLeft="45dp"
                                         android:paddingRight="70dp"
-                                        android:textSize="16sp"
-                                        android:clickable="true"
-                                        android:focusableInTouchMode="true"
-                                        android:imeOptions="actionDone"/>
+                                        android:textSize="@dimen/textsize_normal" />
 
                                     <ImageView
                                         android:layout_width="40dp"
                                         android:layout_height="23dp"
                                         android:layout_gravity="center_vertical"
-                                        android:layout_marginLeft="5dp"
+                                        android:layout_marginLeft="@dimen/margin_small"
                                         android:src="@drawable/b_word" />
 
                                     <RelativeLayout
@@ -150,9 +139,9 @@
 
                                         <Button
                                             android:id="@+id/btncleartextdes"
-                                            android:layout_width="24dp"
-                                            android:layout_height="24dp"
-                                            android:layout_marginRight="36dp"
+                                            android:layout_width="@dimen/margin_large"
+                                            android:layout_height="@dimen/margin_large"
+                                            android:layout_marginRight="70dp"
                                             android:background="@drawable/ic_close_black_24dp"
                                             android:visibility="invisible" />
 
@@ -169,7 +158,7 @@
                         android:layout_height="48dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerInParent="true"
-                        android:layout_marginRight="26dp"
+                        android:layout_marginRight="@dimen/margin_large"
                         android:background="@drawable/circle"
                         android:src="@drawable/ic_swap_vert_black_24dp" />
 
@@ -179,27 +168,25 @@
                     android:id="@+id/linear_btn_search"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/linearbtnsearch"
+                    android:layout_below="@+id/linearSearch"
                     android:background="@color/GreenLight">
 
                     <android.support.v7.widget.CardView
+                        style="@style/borderStyle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="6dp"
-                        android:layout_marginLeft="6dp"
-                        android:layout_marginRight="6dp"
-                        app:cardCornerRadius="5dp"
-                        app:cardElevation="5dp">
+                        app:cardCornerRadius="@dimen/margin_small"
+                        app:cardElevation="@dimen/margin_small">
 
                         <Button
                             android:id="@+id/btnsearch"
                             android:layout_width="match_parent"
                             android:layout_height="40dp"
-                            android:background="#F57F17"
+                            android:background="@color/orange"
                             android:gravity="center"
-                            android:text="ค้นหา"
+                            android:text="@string/text_search"
                             android:textColor="@color/white"
-                            android:textSize="18sp" />
+                            android:textSize="@dimen/textsize_large" />
                     </android.support.v7.widget.CardView>
 
                 </RelativeLayout>
@@ -212,7 +199,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@+id/lineardistance_time"
-                android:layout_below="@+id/linearbtnsearch">
+                android:layout_below="@+id/linearSearch">
 
                 <FrameLayout
                     android:id="@+id/relativemap"
@@ -259,9 +246,9 @@
                 android:id="@+id/lineardistance_time"
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
-                android:background="@color/GreenLight"
                 android:layout_alignParentBottom="true"
-                android:elevation="10dp"
+                android:background="@color/GreenLight"
+                android:elevation="@dimen/margin_small"
                 android:orientation="horizontal">
 
                 <TextView
@@ -269,38 +256,38 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="16dp"
+                    android:layout_marginLeft="@dimen/margin_normal"
                     android:text="0 mins"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_duration" />
+                    android:textSize="@dimen/textsize_large" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="6dp"
+                    android:layout_marginLeft="@dimen/margin_small"
                     android:text="("
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_distance" />
+                    android:textSize="@dimen/textsize_normal" />
 
                 <TextView
                     android:id="@+id/textdistance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="2dp"
+                    android:layout_marginLeft="@dimen/margin_space"
                     android:text="0 km"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_distance" />
+                    android:textSize="@dimen/textsize_normal" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="2dp"
+                    android:layout_marginLeft="@dimen/margin_space"
                     android:text=")"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_distance" />
+                    android:textSize="@dimen/textsize_normal" />
 
             </LinearLayout>
         </RelativeLayout>
@@ -309,10 +296,10 @@
             android:id="@+id/btncalculateOil"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginBottom="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginBottom="@dimen/margin_normal"
+            android:layout_marginRight="@dimen/margin_normal"
             android:backgroundTint="@color/Pink"
-            android:elevation="6dp"
+            android:elevation="@dimen/margin_normal"
             android:src="@drawable/ic_directions_black_24dp"
             app:borderWidth="0dp"
             app:fabSize="normal"
@@ -320,7 +307,6 @@
             app:layout_anchorGravity="bottom|right|end" />
 
     </android.support.design.widget.CoordinatorLayout>
-
 
 </RelativeLayout>
 
