--- a/app/src/main/res/layout/nav_header_navigation_drawer.xml
+++ b/app/src/main/res/layout/nav_header_navigation_drawer.xml
@@ -32,9 +32,9 @@
         android:id="@+id/userNameAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dp"
+        android:layout_marginLeft="@dimen/margin_small"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Car Trip"
+        android:text="@string/app_name"
         android:textSize="20sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
