--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -9,4 +9,34 @@
         <item name="android:windowContentTransitions">true</item>
 
     </style>
+
+    <style name="spinnerStyle">
+        <item name="android:layout_marginLeft">2dp</item>
+        <item name="android:layout_marginRight">2dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+    </style>
+
+
+    <style name="textCalculateHead">
+        <item name="android:textColor">@color/TextShow</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="textCalculate">
+        <item name="android:textColor">@color/TextHide1</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="radioStyle">
+        <item name="android:buttonTint">@color/Btn_Radio</item>
+        <item name="android:textColor">@color/Text_Radio</item>
+        <item name="android:textSize">@dimen/text_town</item>
+    </style>
+
+
+    <style name="borderStyle" parent="CardView">
+        <item name="android:layout_marginBottom">@dimen/margin_small</item>
+        <item name="android:layout_marginLeft">@dimen/margin_small</item>
+        <item name="android:layout_marginRight">@dimen/margin_small</item>
+    </style>
 </resources>
